--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   border-bottom: 1.5px solid black;
-  /* hello */
+  /* helloooo */
 }
 
 .nav-left {
