--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ nav {
 
 .results-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 1.5rem;
 }
 .results-songkick {
@@ -58,4 +58,5 @@ nav {
 .card-spot {
   border: 1px solid black;
   margin-top: 1rem;
+  height: 300px;
 }
