--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,24 @@
+:root {
+  --blck: #191825;
+  --purp: #865DFF;
+  --prpnk: #E384FF;
+  --pnk: #FFA3FD;
+}
+
 body {
   margin: 0;
+  height: 100vh;
+  width: 100%;
   font-family: Arial, Helvetica, sans-serif;
+  background: linear-gradient(180deg, var(--pnk) 0%, var(--purp) 100%);
 }
 
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1.5px solid black;
+  border-bottom: 1.5px solid var(--blck);
+  background: linear-gradient(90deg, var(--purp) 0%, var(--blck) 100%);
   /* helloooopppp */
 }
 
@@ -23,8 +34,9 @@ nav {
 
 .icon {
   width: 2rem;
-  border: 1.5px solid black;
+  border: 1.5px solid var(--blck);
   border-radius: 1.5rem;
+
 }
 
 .search-container {
@@ -34,13 +46,14 @@ nav {
 .input {
   height: 1.5rem;
   border-radius: 16px;
-  border: 1.5px solid black;
+  border: 1.5px solid var(--blck);
 }
 
 .results-container {
   display: flex;
   justify-content: space-around;
   padding: 1.5rem;
+  
 }
 .results-songkick {
   width: 40%;
@@ -53,6 +66,7 @@ nav {
 .card {
   border: 1px solid black;
   margin-top: 1rem;
+  height: 10vh;
 }
 
 .card-spot {
