--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
   height: 100vh;
   width: 100%;
   font-family: Arial, Helvetica, sans-serif;
-  background: linear-gradient(180deg, var(--pnk) 0%, var(--purp) 100%);
+  background: linear-gradient(90deg, var(--pnk) 0%, var(--purp) 100%);
 }
 
 nav {
@@ -38,6 +38,10 @@ nav {
 
 }
 
+h1 {
+  font-size: 2rem;
+  color: var(--blck);
+}
 .search-container {
   padding-right: 1rem;
 }
@@ -48,6 +52,11 @@ nav {
   border: 1.5px solid var(--blck);
   background-color: var(--purp);
 }
+
+/*input[type=text] {
+ color: 
+ border: none;
+}*/
 
 ::placeholder {
   color: var(--blck);
@@ -72,6 +81,10 @@ nav {
 }
 .results-songkick {
   width: 40%;
+}
+
+h2 {
+  font-size: 1.5rem;
 }
 
 .results-spotify {
