--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,10 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+  height: 10vh;
   border-bottom: 1.5px solid var(--blck);
   background: linear-gradient(90deg, var(--purp) 0%, var(--blck) 100%);
 }
@@ -42,6 +46,7 @@ h1 {
   font-size: 2rem;
   color: var(--blck);
 }
+
 .search-container {
   padding-right: 1rem;
 }
@@ -52,11 +57,6 @@ h1 {
   border: 1.5px solid var(--blck);
   background-color: var(--purp);
 }
-
-/*input[type=text] {
- color: 
- border: none;
-}*/
 
 ::placeholder {
   color: var(--blck);
@@ -69,18 +69,21 @@ h1 {
 
 .btn:hover {
   cursor: pointer;
-    box-shadow: 0 0.04rem 1.4rem 0 var(--prpnk);
-    transition: transform 150ms;
+  box-shadow: 0 0.04rem 1.4rem 0 var(--prpnk);
+  transition: transform 150ms;
 }
 
 .results-container {
   display: flex;
   justify-content: space-around;
   padding: 1.5rem;
-  
 }
 .results-songkick {
   width: 40%;
+  margin-top: 5rem;
+  position: relative;
+  left: -25vw;
+  z-index: 0;
 }
 
 h2 {
@@ -88,7 +91,10 @@ h2 {
 }
 
 .results-spotify {
-  width: 40%;
+  width: 30%;
+  margin-top: 5rem;
+  position: fixed;
+  right: 10vw;
 }
 
 .card {
