--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 :root {
   --blck: #191825;
-  --purp: #865DFF;
-  --prpnk: #E384FF;
-  --pnk: #FFA3FD;
+  --purp: #865dff;
+  --prpnk: #e384ff;
+  --pnk: #ffa3fd;
 }
 
 body {
@@ -39,7 +39,6 @@ nav {
   width: 2rem;
   border: 1.5px solid var(--blck);
   border-radius: 1.5rem;
-
 }
 
 h1 {
@@ -78,7 +77,7 @@ h1 {
   justify-content: space-around;
   padding: 1.5rem;
 }
-.results-songkick {
+.results-bandsintown {
   width: 40%;
   margin-top: 5rem;
   position: relative;
