--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,12 @@ aside {
   position: relative;
   border-radius: 0.5rem;
   border: 1px solid black;
+  background-color: var(--blck);
+  color: var(--purp);
+  box-shadow: 12px 12px 2px 1px var(--purp);
+  text-align: center;
 }
+
 .card > p {
   padding-left: 1rem;
   padding-right: 1rem;
