Font size for results container.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,7 @@ aside {
   color: var(--purp);
   box-shadow: 12px 12px 2px 1px var(--purp);
   text-align: center;
+  font-size: 1.3rem;
 }
 
 .card > p {
