--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,16 +58,14 @@ aside {
   margin-left: 50px;
   margin-bottom: 3rem;
   display: flex;
-  align-items:center;
+  align-items: center;
 }
 .header-bandsintown > img {
   margin-left: 1rem;
-
-  font-size: 1.5rem;
+  /* font-size: 1.5rem;
   font-weight: bold; 
   font-style: italic;
-  text-shadow: 0 0 4px white, 0 -5px 4px #ff3, 2px -10px 6px #fd3, -2px -15px 11px #f80, 2px -25px 18px #f20;
-
+  text-shadow: 0 0 4px white, 0 -5px 4px #ff3, 2px -10px 6px #fd3, -2px -15px 11px #f80, 2px -25px 18px #f20; */
 }
 
 .card-container {
@@ -198,7 +196,6 @@ h2 {
   .homepage {
     flex-wrap: wrap;
   }
-
 }
 
 @media (max-width: 800px) {
@@ -212,30 +209,30 @@ h2 {
     width: 40vw;
   }
   .dropbtn {
-    background-color: #4CAF50;
+    background-color: #4caf50;
     color: white;
     padding: 16px;
     font-size: 16px;
     border: none;
     cursor: pointer;
   }
-  
+
   /* The container <div> - needed to position the dropdown content */
   .dropdown {
     position: relative;
     display: inline-block;
   }
-  
+
   /* Dropdown Content (Hidden by Default) */
   .dropdown-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
   }
-  
+
   /* Links inside the dropdown */
   .dropdown-content a {
     color: black;
@@ -243,15 +240,17 @@ h2 {
     text-decoration: none;
     display: block;
   }
-  
+
   /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #f1f1f1}
-  
+  .dropdown-content a:hover {
+    background-color: #f1f1f1;
+  }
+
   /* Show the dropdown menu on hover */
   .dropdown:hover .dropdown-content {
     display: block;
   }
-  
+
   /* Change the background color of the dropdown button when the dropdown content is shown */
   .dropdown:hover .dropbtn {
     background-color: #3e8e41;
