--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,8 +149,13 @@ h1 {
   width: 100%;
 }
 
+.topartists {
+  margin-left: 10vw;
+}
+
 .topsongs {
-  margin-right: 15vw;
+  margin-right: 20vw;
+  padding-left: 10vw;
 }
 
 img.profpic {
@@ -207,6 +212,11 @@ h2 {
   }
   li {
     width: 40vw;
+    font-size: 1rem;
+    text-align: right;
+  }
+  .card {
+    font-size: 1rem;
   }
   .dropbtn {
     background-color: #4caf50;
