--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 body {
   margin: 0;
   width: 100%;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: copperplate, Helvetica, fantasy;
   background: linear-gradient(90deg, var(--pnk) 0%, var(--purp) 100%);
 }
 
@@ -88,6 +88,7 @@ aside {
   box-shadow: 12px 12px 2px 1px var(--purp);
   text-align: center;
   font-size: 1.3rem;
+
 }
 
 .card > p {
