Fixed media query for search bar & Top 10 lists @ 600.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,10 +205,11 @@ h2 {
 
   .homepage {
     flex-wrap: wrap;
+    justify-content: left;
   }
 
   nav {
-    height: 15vh;
+    height: 16vh;
     display: block;
   }
 
