--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,14 +59,14 @@ aside {
   margin-bottom: 3rem;
   display: flex;
   align-items: center;
-}
-.header-bandsintown > img {
-  margin-left: 1rem;
   font-size: 1.5rem;
   font-weight: bold;
   font-style: italic;
   text-shadow: 0 0 4px white, 0 -5px 4px #ff3, 2px -10px 6px #fd3,
     -2px -15px 11px #f80, 2px -25px 18px #f20;
+}
+.header-bandsintown > img {
+  margin-left: 1rem;
 }
 
 .card-container {
@@ -178,7 +178,7 @@ li {
   border: 1px solid var(--blck);
   margin-top: 1rem;
   height: 10vh;
-  width: 20vw;
+  width: 25vw;
   background-color: var(--blck);
   color: var(--purp);
   font-size: 1.3rem;
@@ -241,6 +241,10 @@ font-size: 1.3rem;
   h2 {
     padding-top: 2vh;
   }
+
+  footer {
+    height: 35vh;
+  }
 }
 
 @media (max-width: 800px) {
@@ -251,7 +255,7 @@ font-size: 1.3rem;
     width: 100%;
   }
   li {
-    width: 40vw;
+    width: 30vw;
     font-size: 1rem;
     text-align: right;
   }
