Added logo to footer & actual content inside about us.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,6 +202,12 @@ margin-top: 2rem;
 text-align: center;
 }
 
+.footer-logo {
+  display: block;
+  align-items: center;
+  padding-top: 1rem;
+}
+
 h3 {
 font-size: 1.3rem;
 }
