--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,39 +34,47 @@ nav {
 
 aside {
   display: flex;
+  flex-direction: column;
   width: 15%;
-  justify-content: center;
+  align-content: center;
   position: fixed;
   right: 4vw;
+  /* display: none; */
 }
 
 .box {
   border: 1px solid black;
   border-radius: 0.5rem;
-  height: 20rem;
-  width: 30vh;
+  height: 100%;
+  width: 100%;
   margin-top: 12.5rem;
   background-color: var(--blck);
   color: white;
   font-size: 2rem;
   padding-left: 1rem;
   font-weight: bold;
-  box-shadow: 12px 12px 2px 1px #1DB954;
+  box-shadow: 12px 12px 2px 1px #1db954;
+  display: grid;
+}
+.box > h2 {
+  text-align: start;
 }
 
 .spotify-box > a {
-  font-size: 1.2rem;
+  font-size: 1rem;
   padding-bottom: 1rem;
+  text-align: left;
   color: white;
-  padding-left: 1rem;
+  padding-left: 0.1rem;
 }
 
 .request {
-  font-size: 1.5rem;
+  font-size: 1rem;
+  text-align: center;
 }
 
 .request > a {
-  color: var(--purp);
+  color: white;
 }
 
 .results-bandsintown {
@@ -172,6 +180,7 @@ form {
   display: flex;
   justify-content: space-around;
   width: 100%;
+  /* margin-top: 10rem; */
 }
 
 .topartists {
@@ -196,7 +205,6 @@ img.profpic {
 .toplist {
   display: flex;
   border: 1px solid var(--blck);
-  margin-top: 1rem;
   height: 10vh;
   width: 25vw;
   background-color: var(--blck);
@@ -216,14 +224,14 @@ h2 {
 }
 
 footer {
-display: block;
-z-index: 2;
-height: 30vh;
-width: 100%;
-border-top: 1.5px solid var(--blck);
-background: linear-gradient(90deg, var(--purp) 0%, var(--blck) 100%);
-margin-top: 2rem;
-text-align: center;
+  display: block;
+  z-index: 2;
+  height: 30vh;
+  width: 100%;
+  border-top: 1.5px solid var(--blck);
+  background: linear-gradient(90deg, var(--purp) 0%, var(--blck) 100%);
+  margin-top: 2rem;
+  text-align: center;
 }
 
 .footer-logo {
@@ -233,7 +241,7 @@ text-align: center;
 }
 
 h3 {
-font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 
 .foot {
@@ -290,7 +298,7 @@ font-size: 1.5rem;
     width: 100%;
   }
   .toplist {
-    width: 31vw;
+    width: 100%;
     font-size: 1rem;
     text-align: right;
   }
